--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
-} */
-
 body {
     width: 100vw;
     height: 100vh;
@@ -14,7 +7,7 @@ body {
     background-image: url('https://source.unsplash.com/1600x900/?landscape');
 }
 
-.box-major {
+.main-box {
     background-color: black;
     opacity: 0.8;
     border-radius: 25px;
@@ -63,6 +56,7 @@ body {
     align-items: center;
     width: 32.7px;
 }
+
 .img-weather {
     display: flex;
     align-items: center;
@@ -75,7 +69,7 @@ body {
     font-weight: 300;
 }
 
-.temperature{
+.temperature {
     font-size: 20px;
     color: white;
     margin-top: 20px;
@@ -87,7 +81,7 @@ body {
     margin-top: 20px;
 }
 
-.type-sky{
+.sky {
     color: white;
     margin-left: 20px;
     text-transform: capitalize;
